--- a/package.json
+++ b/package.json
@@ -32,7 +32,10 @@
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "connect-mongo": "^5.1.0",
+    "dotenv": "^16.4.5",
     "express-handlebars": "^7.1.2",
+    "express-session": "^1.18.0",
     "hbs": "^4.2.0",
     "mongoose": "^8.4.1",
     "passport": "^0.7.0",
@@ -47,6 +50,7 @@
     "@nestjs/testing": "^10.0.0",
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.17",
+    "@types/express-session": "^1.18.0",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
     "@types/passport-jwt": "^4.0.1",
