--- a/package.json
+++ b/package.json
@@ -21,28 +21,32 @@
     "build:css": "postcss ./public/styles.css -o ./public/output.css"
   },
   "dependencies": {
-    "@nestjs/common": "^10.0.0",
+    "@fonticonpicker/fonticonpicker": "^3.1.1",
+    "@fortawesome/fontawesome-free": "^6.5.2",
+    "@nestjs/common": "^10.3.9",
     "@nestjs/config": "^3.2.2",
-    "@nestjs/core": "^10.0.0",
+    "@nestjs/core": "^10.3.9",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/mongoose": "^10.0.6",
     "@nestjs/passport": "^10.0.3",
-    "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-express": "^10.3.9",
     "@nestjs/swagger": "^7.3.1",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "connect-mongo": "^5.1.0",
     "dotenv": "^16.4.5",
-    "express-handlebars": "^7.1.2",
+    "express-handlebars": "^7.1.3",
     "express-session": "^1.18.0",
     "hbs": "^4.2.0",
+    "jquery": "^1.12.4",
     "mongoose": "^8.4.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "switchery": "^0.0.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -52,6 +56,7 @@
     "@types/express": "^4.17.17",
     "@types/express-session": "^1.18.0",
     "@types/jest": "^29.5.2",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20.3.1",
     "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
