--- a/package.json
+++ b/package.json
@@ -40,12 +40,14 @@
     "express-session": "^1.18.0",
     "hbs": "^4.2.0",
     "jquery": "^1.12.4",
+    "moment": "^2.30.1",
     "mongoose": "^8.4.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
+    "sharp": "^0.33.4",
     "switchery": "^0.0.2"
   },
   "devDependencies": {
