--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "@typescript-eslint/parser": "^6.0.0",
     "autoprefixer": "^10.4.19",
     "babel-loader": "^9.1.3",
+    "css-loader": "^7.1.2",
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
@@ -86,6 +87,7 @@
     "postcss": "^8.4.38",
     "prettier": "^3.0.0",
     "source-map-support": "^0.5.21",
+    "style-loader": "^4.0.0",
     "supertest": "^6.3.3",
     "tailwindcss": "^3.4.4",
     "ts-jest": "^29.1.0",
