--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@nestjs/swagger": "^7.3.1",
     "@vue/compiler-sfc": "^3.4.31",
     "@vue/server-renderer": "^3.4.31",
+    "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
@@ -51,6 +52,7 @@
     "rxjs": "^7.8.1",
     "sharp": "^0.33.4",
     "switchery": "^0.0.2",
+    "vee-validate": "^4.13.2",
     "vue": "^3.4.31",
     "vue-loader": "^17.3.1",
     "vue-server-renderer": "^2.7.16",
@@ -58,7 +60,8 @@
     "webpack": "^5.93.0",
     "webpack-dev-middleware": "^7.2.1",
     "webpack-hot-middleware": "^2.26.1",
-    "webpack-node-externals": "^3.0.0"
+    "webpack-node-externals": "^3.0.0",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.24.9",
