--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "build": "webpack --config webpack.config.js",
+    "build": "nest build",
+    "build:front": "webpack --config webpack.config.js",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "NODE_ENV=development nest start --watch",
@@ -21,6 +22,8 @@
     "build:css": "postcss ./public/styles.css -o ./public/output.css"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.623.0",
+    "@aws-sdk/client-ses": "^3.623.0",
     "@fonticonpicker/fonticonpicker": "^3.1.1",
     "@fortawesome/fontawesome-free": "^6.5.2",
     "@nestjs/common": "^10.3.9",
@@ -63,6 +66,7 @@
     "webpack-dev-middleware": "^7.2.1",
     "webpack-hot-middleware": "^2.26.1",
     "webpack-node-externals": "^3.0.0",
+    "xlsx": "^0.18.5",
     "yup": "^1.4.0"
   },
   "devDependencies": {
