--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "dotenv": "^16.4.5",
     "express-handlebars": "^7.1.3",
     "express-session": "^1.18.0",
+    "firebase": "^10.13.1",
+    "firebase-admin": "^12.4.0",
     "hbs": "^4.2.0",
     "jquery": "^1.12.4",
     "moment": "^2.30.1",
@@ -51,6 +53,7 @@
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
+    "qrcode": "^1.5.4",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "sharp": "^0.33.4",
